@@ -149,3 +149,4 @@ v 1.9:
 	- Make 'manload' reload the config correctly.
 	- Minor optimization when checking bukkit permissions.
 	- Better reporting when a users.yml is failing to load.
+	- Expanded '/manuadd'to accept an optional variable for the world (eg '/manuadd <player> <group> <world>').
